<resources>
    <string name="app_name">CardView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tropico_app">Tropico App</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
</resources>
