<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/imageViewTropico"
        android:layout_width="131dp"
        android:layout_height="124dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_filter_drama_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewTropico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/tropico_app" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:text="@string/login"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:hint="@string/usuario"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTextPasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/contrase_a" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="login"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/olvid_su_contrase_a" />

</LinearLayout>